--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,13 @@
 // Colors
+$dark-grey: #333333;
+$grey: #666666;
+$blue: #1c88df;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
 
+// Font Size
+$font-size-small: 1.4rem;
+$font-size-large: 1.8rem;
 
 // Spacing
 $s-size: 1.2rem;
